--- a/env/tmux.conf
+++ b/env/tmux.conf
@@ -3,10 +3,11 @@
 # run-shell "powerline-daemon -q"
 
 # Mouse related options (scroll + switch pane)
-setw -g mode-mouse on 
-set-option -g mouse-select-pane on 
-set-option -g mouse-resize-pane off 
-set-option -g mouse-select-window on 
+set-option -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
+if 'echo $(tmux -V) | grep "tmux 2[.].*"' 'set-option -g mouse on'
+if 'echo $(tmux -V) | grep "tmux 1[.].*"' 'set-option -g mouse-select-pane on'
+if 'echo $(tmux -V) | grep "tmux 1[.].*"' 'set-option -g mouse-select-window on'
+
 set-option -g set-clipboard on
 
 # Window title from tab name
