sway: enable idle daemon + default to numlock

--- a/sway/sway.config
+++ b/sway/sway.config
@@ -1,4 +1,5 @@
 # Default config for sway
+
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
 #
@@ -40,11 +41,11 @@ output * bg /usr/share/backgrounds/default.png fill
 #
 # Example configuration:
 #
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' \
-#               resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
+exec swayidle -w \
+         timeout 300 'swaylock -f -c 000000' \
+         timeout 60 'swaymsg "output * dpms off"' \
+              resume 'swaymsg "output * dpms on"' \
+         before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
@@ -67,6 +68,7 @@ output * bg /usr/share/backgrounds/default.png fill
 input * {
     xkb_layout "fr"
     xkb_options "grp:win_space_toggle"
+    xkb_numlock "enabled"
 }
 
 set $wk1 "1:office"
