emoji: add bindings

--- a/sway/sway.config
+++ b/sway/sway.config
@@ -21,6 +21,7 @@ set $term foot
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu bemenu-run -l 15 | xargs swaymsg exec --
+set $emoji "e=$(cat ~/Dotfiles/assets/emojis | bemenu -c -l 20 -W 0.5 -i --fn Monospace,11 | cut -d ' ' -f 1); wl-copy $e"
 
 #dmenu_path | dmenu | xargs swaymsg exec --
 
@@ -125,6 +126,7 @@ workspace $wk10 output $outmain
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+z exec $emoji
 #
 # Moving around:
 #
