--- a/sway/waybar.config
+++ b/sway/waybar.config
@@ -181,8 +181,8 @@
         "temperature",
         //"custom/keyboard-layout",
         "battery",
-        "clock#date",
-        "clock#time",
+        "custom/clock",
+        //"clock#time",
         "tray",
     ],
 
@@ -230,17 +230,16 @@
         "tooltip": true
     },
 
-    "clock#time": {
+    "custom/clock": {
         "interval": 1,
-        "format": "{:%H:%M:%S}",
-        "tooltip": false
+        "exec": "date +'%d %b %Y %H:%M:%S'",
     },
 
-    "clock#date": {
-      "interval": 10,
-      "format": "  {:%e %b %Y}", // Icon: calendar-alt
-      "tooltip-format": "{:%e %B %Y}"
-    },
+    //"clock#date": {
+    //  "interval": 10,
+    //  "format": "  {:%e %b %Y}", // Icon: calendar-alt
+    //  "tooltip-format": "{:%e %B %Y}"
+    //},
 
     "cpu": {
         "interval": 5,
