sway: bemenu with custom font

--- a/sway/sway.config
+++ b/sway/sway.config
@@ -20,7 +20,7 @@ set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu bemenu-run -l 15 | xargs swaymsg exec --
+set $menu bemenu-run --fn "FiraCode Nerd Font" 10 -l 15 | xargs swaymsg exec --
 set $emoji "e=$(cat ~/Dotfiles/assets/emojis | bemenu -c -l 20 -W 0.5 -i --fn Monospace,11 | cut -d ' ' -f 1); wl-copy $e"
 
 #dmenu_path | dmenu | xargs swaymsg exec --
