sway: set brightness

--- a/sway/sway.config
+++ b/sway/sway.config
@@ -285,9 +285,16 @@ bar {
 
 default_border pixel
 
-bindsym $mod+Shift+s exec "swaylock -c 000000"
-exec mako
 exec nm-applet --indicator
 exec blueman-applet
+
+# Custom bindings
+bindsym $mod+Shift+s exec "swaylock -c 000000 & systemctl suspend"
+bindsym XF86MonBrightnessDown exec light -U 10.0
+bindsym XF86MonBrightnessUp exec light -A 10.0
+
+bindsym $mod+XF86MonBrightnessDown exec light -s sysfs/leds/kbd_backlight -U 10.0
+bindsym $mod+XF86MonBrightnessUp exec light -s sysfs/leds/kbd_backlight -A 10.0
+
 
 include /etc/sway/config.d/*
