sway: quick&dirty updates

--- a/sway/sway.config
+++ b/sway/sway.config
@@ -84,11 +84,11 @@ set $wk9 "9:doc"
 set $wk10 "10:term"
 
 set $outmain eDP-1
-#set $outext DP-1
-set $outext HDMI-A-1
+set $outext DP-1
+#set $outext HDMI-A-1
 
 output eDP-1 pos 0 0 res 1920x1080 
-output DP-1 pos 1920 0 res 1920x1200
+output DP-1 pos 1920 0 res 2560x1440
 
 workspace $wk1 output $outmain
 workspace $wk2 output $outmain
@@ -267,27 +267,28 @@ bindsym $mod+r mode "resize"
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    # status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
-    swaybar_command waybar
-    #status_command i3status 
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
-}
+#bar {
+#    position top
+#
+#    # When the status_command prints a new line to stdout, swaybar updates.
+#    # The default just shows the current date and time.
+#    # status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
+#    swaybar_command waybar
+#    #status_command i3status 
+#
+#    colors {
+#        statusline #ffffff
+#        background #323232
+#        inactive_workspace #32323200 #32323200 #5c5c5c
+#    }
+#}
 
 default_border pixel
 
 bindsym $mod+Shift+s exec "swaylock -c 000000"
-exec mako
-exec nm-applet --indicator
-exec blueman-applet
+#exec mako
+#exec nm-applet --indicator
+#exec blueman-applet
+#include /etc/sway/config.d/*
 
-include /etc/sway/config.d/*
+include '$(/usr/libexec/sway/layered-include "/usr/share/sway/config.d/*.conf" "/etc/sway/config.d/*.conf" "${XDG_CONFIG_HOME:-$HOME/.config}/sway/config.d/*.conf")'
