--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -41,7 +41,7 @@ font=FiraCode Nerd Font:size=11
 # command-focused=no
 
 [scrollback]
-# lines=1000
+lines=10000
 # multiplier=3.0
 # indicator-position=relative
 # indicator-format=
